--- a/segregation-map/index.html
+++ b/segregation-map/index.html
@@ -13,7 +13,9 @@
 
 
 <body style="margin:20px;">
-  <div id="map-wrap"></div>
+  <div>
+    <div id="map-wrap"></div>
+  </div>
 </body>
 
 <script>
