On initial load, it seems a scrollbar (i.e. 15px) is assumed in getBoundingClientRect(). In this commit, the initial width calc is 15px narrower than the setTimeout width. They are the same if there is a vertical scroll.

--- a/segregation-map/index.html
+++ b/segregation-map/index.html
@@ -13,9 +13,7 @@
 
 
 <body style="margin:20px;">
-  <div>
-    <div id="map-wrap"></div>
-  </div>
+    <div id="wfrey-map-wrap"></div>
 </body>
 
 <script>
