--- a/segregation-map/index.html
+++ b/segregation-map/index.html
@@ -17,7 +17,7 @@
 </body>
 
 <script>
-  var el = document.getElementById("map-wrap");
+  var el = document.getElementById("wfrey-map-wrap");
   var map = new dotMap(el);
 
   var callback = function(){
